<resources>
    <string name="app_name">Private DNS Quick Toggle</string>
    <string name="tile_name">Private DNS Toggle</string>
    <string name="permission_missing">Permission not granted, check app to see how to do it</string>
    <string name="dns_off">Off</string>
    <string name="dns_auto">Auto</string>
    <string name="dns_unknown">Unknown</string>
    <string name="add_server">Add Server</string>
    <string name="menu_add">Add</string>
    <string name="menu_save">Save</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="select_server">Select Server</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete_question">Delete</string>
    <string name="delete_message">Are you sure you want to delete server?</string>
    <string name="delete">Delete</string>
    <string name="server_length_error">Server address cannot be empty</string>
    <string name="add_edittext_label_hint">DNS server Label (Optional)</string>
    <string name="add_edittext_hint">DNS server address</string>
    <string name="options">Options</string>
    <string name="ok">OK</string>
    <string name="auto_option_description">Choose which options to include in the tile</string>
    <string name="auto_option_only_off">Only off</string>
    <string name="auto_option_only_auto">Only auto</string>
    <string name="auto_option_off_and_auto">Off and auto</string>
    <string name="auto_option_only_private">Only Private DNS</string>
    <string name="open_app">Open app</string>
    <string name="set_to_off_toast">Private DNS turned off</string>
    <string name="set_to_auto_toast">Private DNS set to auto</string>
    <string name="set_to_provider_toast">Private DNS set to %1$s</string>
    <string name="require_unlock_setting">Require unlocking the device to change server</string>
    <string name="a11y_drag_handle">Drag handle</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="import_success">Imported</string>
    <string name="import_failure">Import failed</string>
    <string name="import_failure_json">Import failed, malformed JSON</string>
    <string name="copy_success">Copied</string>
    <string name="menu_import_from_file">From file</string>
    <string name="menu_import_from_clipboard">From clipboard</string>
    <string name="menu_export_to_clipboard">To clipboard</string>
    <string name="menu_export_share">Share</string>
    <string name="menu_export_to_file">To file</string>
    <string name="export_failure">Saving failed</string>
    <string name="export_success">Saved successfully</string>
    <string name="edit_server">Edit server</string>
    <string name="no_servers_added">No Servers Added</string>
    <string name="empty_hint">Tap on the button below to add one</string>
    <string name="add_server_enabled">Enabled</string>
    <string name="shizuku_success_toast">Permission granted, you can revoke the Shizuku permission now</string>
    <string name="shizuku_failure_toast">Failed to acquire permission, please grant it manually</string>
    <string name="shortcut_do_cycle">Next server/mode</string>
    <string name="shortcut_switch_mode">Switch mode</string>
    <string name="wifi_settings_title">Wi-Fi Settings</string>
    <string name="no_wifi_configs">No Wi-Fi configurations added</string>
    <string name="add_wifi_config">Add Wi-Fi Configuration</string>
    <string name="wifi_ssid_hint">Wi-Fi SSID</string>
    <string name="on_connect_action">On Connect Action</string>
    <string name="on_disconnect_action">On Disconnect Action</string>
    <string name="action_off">Off</string>
    <string name="action_auto">Auto</string>
    <string name="action_private_dns_server">Private DNS Server</string>
    <string name="select_dns_server">Select DNS Server</string>
    <string name="save_wifi_config">Save Wi-Fi Configuration</string>
    <string name="edit_wifi_config">Edit Wi-Fi Configuration</string>
    <string name="delete_wifi_config">Delete Wi-Fi Configuration</string>
    <string name="delete_wifi_config_message">Are you sure you want to delete this Wi-Fi configuration?</string>
    <string name="wifi_config_ssid_empty_error">Wi-Fi SSID cannot be empty</string>
    <string name="delete_wifi_config_title">Delete Wi-Fi Configuration</string>
    <string name="enable_wifi_logic">Enable Wi-Fi based Private DNS trigger</string>
    <string name="wifi_logic_description">This will affect only subsequent changes and not impact currently set Private DNS server.</string>
    <string name="no_ssids_found">No saved Wi-Fi networks found or all are already configured.</string>
</resources>